edition = "2023";  // successor to proto2 and proto3

package localSensor;

import "storage/policy.proto";

message LocalSensorPolicies {
  repeated storage.Policy policies = 1;
}
